src/objects/Shop_Order__c.object
<CustomObject>
    <fields>
        <fullName>Activate_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Activate Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shop Buyers</relationshipLabel>
        <relationshipName>Shop_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Selected_Type__c</fullName>
        <defaultValue>&quot;Laptop&quot;</defaultValue>
        <label>Selected Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Selected__c</fullName>
        <description>number of selected products</description>
        <label>Total Selected</label>
        <summaryForeignKey>Shop_Product_Order__c.Shop_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Shop Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Activate_Date__c</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shop Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>